Finish base framework functional

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,8 @@
     "arrow-parens":"off",
     "comma-dangle":"off",
     "linebreak-style": "off",
-    "require-jsdoc":"off"
+    "require-jsdoc":"off",
+    "operator-linebreak":"off"
   },
   "extends": ["eslint:recommended", "google"]
 }
