--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "lit-html": "^2.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "sass": "^1.57.0",
     "sass-loader": "^13.2.0",
