Create unit testing env

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
   "env":{
     "es6":true,
     "browser":true,
-    "node":true
+    "node":true,
+    "jest/globals": true 
   },
   "rules":{
     "semi":"off",
@@ -16,5 +17,6 @@
     "require-jsdoc":"off",
     "operator-linebreak":"off"
   },
+  "plugins": ["jest"],
   "extends": ["eslint:recommended", "google"]
 }
