--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Pure JavaScript Excel Application",
   "main": "webpack.config.js",
   "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch",
     "dev": "cross-env NODE_ENV=development webpack --mode development",
     "start": "cross-env NODE_ENV=development webpack serve",
     "build": "cross-env NODE_ENV=production webpack --mode production",
@@ -27,9 +29,11 @@
   "private": true,
   "browserslist": "> 0.25%, not dead",
   "devDependencies": {
+    "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.5",
     "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "^7.20.2",
+    "@types/jest": "^29.2.4",
     "babel-loader": "^9.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -39,6 +43,9 @@
     "eslint-config-google": "^0.14.0",
     "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "jsdom": "^20.0.3",
     "lit-html": "^2.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "sass": "^1.57.0",
@@ -48,6 +55,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "eslint-plugin-jest": "^27.1.7",
     "normalize.css": "^8.0.1"
   }
 }
